--- a/hospital/vercel.json
+++ b/hospital/vercel.json
@@ -1,12 +1,17 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "hospital/wsgi.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
-        "runtime": "python3.12.2"
+        "runtime": "python3.10"
       }
+    },
+    {
+      "src": "hospital/requirements.txt",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
