--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,25 @@
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "hospital/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.10"
+      }
+    },
+    {
+      "src": "hospital/requirements.txt",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/hospital/wsgi.py"
+    }
+  ]
+}
+
 
